feat: preview, favicon
